tekton/eventlisteners/nginx-ingress/gitlab-el-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-el
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /el/reviews/topic
          pathType: Prefix
          backend:
            service:
              name: el-reviews-topic-listener
              port:
                number: 8080
        - path: /el/reviews/main
          pathType: Prefix
          backend:
            service:
              name: el-reviews-main-listener
              port:
                number: 8080
